; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt7601u/extr_usb.c_mt7601u_wr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/mediatek/mt7601u/extr_usb.c_mt7601u_wr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mt7601u_dev = type { i32 }

@USHRT_MAX = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [20 x i8] c"write high off:%08x\00", align 1
@MT_VEND_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mt7601u_wr(%struct.mt7601u_dev* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.mt7601u_dev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.mt7601u_dev* %0, %struct.mt7601u_dev** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* @USHRT_MAX, align 8
  %9 = icmp sgt i64 %7, %8
  %10 = zext i1 %9 to i32
  %11 = load i64, i64* %5, align 8
  %12 = call i32 @WARN_ONCE(i32 %10, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i64 %11)
  %13 = load %struct.mt7601u_dev*, %struct.mt7601u_dev** %4, align 8
  %14 = load i32, i32* @MT_VEND_WRITE, align 4
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @mt7601u_vendor_single_wr(%struct.mt7601u_dev* %13, i32 %14, i64 %15, i64 %16)
  ret void
}

declare dso_local i32 @WARN_ONCE(i32, i8*, i64) #1

declare dso_local i32 @mt7601u_vendor_single_wr(%struct.mt7601u_dev*, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
